# github-pi

./: .gitignore  README.rst  pyproject.toml
github_pi/app/: server.py  utils.py
github_pi/app/views/: index.tpl  package.tpl
github_pi/github_storage/: assets.py  utils.py
github_pi/settings/: __init__.py
